Bug 53042 - [FILEOPEN] Bad macros import from xlsm
Summary: [FILEOPEN] Bad macros import from xlsm
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.5.3 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on:
Blocks: Macro-VBA XLS
  Show dependency treegraph
 
Reported: 2012-08-01 12:59 UTC by Nikolay Morozov
Modified: 2022-09-24 23:32 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
sample file (349.36 KB, application/vnd.ms-excel.sheet.macroEnabled.12)
2012-08-01 12:59 UTC, Nikolay Morozov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nikolay Morozov 2012-08-01 12:59:43 UTC
Created attachment 65031 [details]
sample file

Buttons not working at all
Comment 1 Joel Madero 2013-05-30 16:50:16 UTC
CC'ing Noel on this.

Noel - thoughts? This macro does not work and looks quite complicated. Is it a bug, enhancement, or ??
Comment 2 Noel Power 2013-05-30 19:01:37 UTC
(In reply to comment #1)
> CC'ing Noel on this.
> 
> Noel - thoughts? This macro does not work and looks quite complicated. Is it
> a bug, enhancement, or ??

the macros not getting fired is definitely a bug
regarding execution of the macros that's entirely a different matter, api for example we haven't implemented yet is an enhancement
Comment 3 Commit Notification 2013-06-04 14:36:56 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=25bb9d13b259dbfb73f1412506f0d051b3670089

fix for fdo#53042 fix ole object macro bindings ( for xlsm )



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 tommy27 2014-11-20 06:19:28 UTC
hi Noel and Nikolay,
can we label this as FIXED or the issue is still reproducible?
Comment 5 Xisco Faulí 2016-09-10 16:05:25 UTC
Hi Noel,
I'm setting this ticket back to NEW as it has been inactive for more than 3
months.
Feel free to assign it back to you if you're still working on this.
Regards
Comment 6 Xisco Faulí 2016-10-23 12:54:09 UTC
Hello Noel,
Is this bug already fixed?
If so, could you please close it as RESOLVED FIXED?
Comment 7 QA Administrators 2018-08-14 02:33:01 UTC Comment hidden (obsolete)
Comment 8 QA Administrators 2020-08-14 04:32:56 UTC Comment hidden (obsolete)
Comment 9 QA Administrators 2022-08-15 03:44:33 UTC Comment hidden (obsolete, spam)
Comment 10 Justin L 2022-09-24 23:32:27 UTC
The three buttons are launching the macros.
Closing this as fixed, because that is the stated issue, and it has a working patch. Tested in LO 7.5 master.